--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-olvid-bot>=1.3.0
+olvid-bot>=1.3.0.post2
 sphinx==7.4.7
 sphinx-click==5.1.0
 sphinx-panels==0.4.1
@@ -8,3 +8,5 @@ myst-parser==4.0.0
 sphinx-book-theme==1.1.3
 sphinx-autobuild==2024.10.3
 sphinx-intl==2.3.0
+sphinx-copybutton==0.5.2
+sphinx-substitution-extensions
